<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="12dp"
    tools:context=".Login_Res.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/rem_extrabold"
        android:text="@string/app_name"
        android:textColor="#D42323"
        android:textSize="40sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/rem_bold"
        android:text="Xin chào, Đăng nhập để tiếp tục"
        android:textColor="@android:color/black"
        android:textSize="14sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/rem_bold"
        android:text="Email"
        android:textColor="@android:color/black"
        android:textSize="14sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp">
        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="match_parent"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:layout_height="50dp"
            android:fontFamily="@font/rem_regular"
            android:inputType="textEmailAddress"
            android:background="@drawable/input_background"
            android:textSize="16dp"
            android:textColor="#000000" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/rem_bold"
        android:text="Password"
        android:textColor="@android:color/black"
        android:textSize="14sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/black">
        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:fontFamily="@font/rem_regular"
            android:background="@drawable/input_background"
            android:inputType="textPassword"
            android:textSize="16dp"
            android:textColor="#000000" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <CheckBox
            android:id="@+id/checkBoxRememberMe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.1"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="6dp"
            android:fontFamily="@font/rem_bold"
            android:text="Remember Me"
            android:textColor="@color/black"
            android:buttonTint="@color/black" />
        <Button
            android:id="@+id/buttonForgotPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="-15dp"
            android:background="@android:color/transparent"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:fontFamily="@font/rem_bold"
            android:text="Quên mật khẩu"/>
    </LinearLayout>

    <!--    <LinearLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="10dp"-->
    <!--        android:orientation="horizontal"-->
    <!--        android:gravity="center_vertical">-->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="12dp"
        app:cardCornerRadius="12dp">
        <Button
            android:id="@+id/loginbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#D42323"
            android:fontFamily="@font/rem_bold"
            android:textAllCaps="false"
            android:text="Đăng nhập" />
    </androidx.cardview.widget.CardView>

    <!--        <ImageButton-->
    <!--            android:id="@+id/biometric_login"-->
    <!--            android:src="@drawable/finger_print"-->
    <!--            android:layout_width="50dp"-->
    <!--            android:layout_height="50dp"-->
    <!--            android:layout_weight="1"-->
    <!--            android:visibility="gone"-->
    <!--            android:scaleType="centerInside"-->
    <!--            android:layout_gravity="center"-->
    <!--            />-->

    <!--    </LinearLayout>-->

    <Button
        android:id="@+id/gotoRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/rem_bold"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:text="Không có tài khoản? Đăng kí" />

    <ImageButton
        android:id="@+id/biometric_login"
        android:src="@drawable/finger_print"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="gone"
        android:scaleType="centerInside"
        android:layout_gravity="center"
        />
</androidx.appcompat.widget.LinearLayoutCompat>